Fixed .content box-shadow in dark mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,7 +189,6 @@ p {
     border-radius: 1.2rem;
     z-index: 2;
     transition: transform 0.2s cubic-bezier(0.25,0.8,0.25,1), box-shadow 0.2s cubic-bezier(0.25,0.8,0.25,1);
-    box-shadow: 0 0.7rem 2.3rem 0 rgba(0,0,0,0.1);
 }
 .list-header {
     margin: 6em 0;
@@ -588,6 +587,7 @@ footer {
     }
     .content {
         background-color: #222222;
+        box-shadow: 0 0.7rem 2.3rem 0 rgba(0,0,0,0.0.05);
     }
     .card {
         background-color: #222222;
